# encode2mp3

./: CMakeLists.txt  README  encode2mp3.cpp  encode2mp3.hpp  filesystem.cpp  filesystem.hpp
tests/: test_file_filter.cpp
